--- a/index.html
+++ b/index.html
@@ -425,10 +425,10 @@
     <header>
         <div class="header-content">
             <div class="logo">
-                <i class="fas fa-wallet"></i> Minhas Finanças
+                <i class="fas fa-wallet"></i> Minhas Finanças Coco
             </div>
             <div class="user-info">
-                <span>Bem-vindo, João</span>
+                <span>Bem-vindo, Edu</span>
                 <div class="user-avatar">JS</div>
             </div>
         </div>
@@ -1311,4 +1311,5 @@
         }
     </script>
 </body>
+
 </html>
